# Epitech_Babel

./: .gitignore  .gitignore~  CMakeLists.txt  README.md  babel.db  conanfile.txt  linux_install.sh  run.sh
code/: CMakeLists.txt  babel_client
code/include/: Contact.hpp  TcpQuery.hpp
code/include/client/: ArgParser.hpp  Audio.hpp  AudioPacket.hpp  CallManager.hpp  Contact.hpp  Core.hpp  Database.hpp  Error.hpp  Graphical.hpp  IAudioEncoder.hpp  IAudioStream.hpp  Opus.hpp  QtCallSection.hpp  QtContactList.hpp  QtNetworkForm.hpp  QtStyle.hpp  UdpQuery.hpp  UdpRecorder.hpp  UdpSoundIO.hpp  Window.hpp
code/include/server/: SQLdatabase.hpp  async.hpp  async_handler.hpp  database.hpp  server.hpp
code/src/: Contact.cpp  TcpQuery.cpp
code/src/client/: ArgParser.cpp  Audio.cpp  AudioPacket.cpp  CallManager.cpp  Contact.cpp  Core.cpp  Database.cpp  Graphical.cpp  Opus.cpp  QtCallSection.cpp  QtContactList.cpp  QtNetworkForm.cpp  Test.cpp  UdpQuery.cpp  UdpRecorder.cpp  UdpSoundIO.cpp  Window.cpp  main.cpp  test
code/src/server/: SQLdatabase.cpp  async.cpp  async_handler.cpp  database.cpp  server.cpp
documentation/Doxygen documentation/: _audio_8cpp.html  _audio_8hpp.html  _audio_8hpp_source.html  _call_manager_8cpp.html  _call_manager_8hpp.html  _call_manager_8hpp_source.html  _contact_8cpp.html  _contact_8hpp.html  _contact_8hpp_source.html  _core_8cpp.html  _core_8hpp.html  _core_8hpp_source.html  _database_8cpp.html  _database_8hpp.html  _database_8hpp_source.html  _error_8hpp.html  _error_8hpp_source.html  _i_audio_encoder_8hpp.html  _i_audio_encoder_8hpp_source.html  _i_audio_stream_8hpp.html  _i_audio_stream_8hpp_source.html  _opus_8cpp.html  _opus_8hpp.html  _opus_8hpp_source.html  _qt_call_section_8cpp.html  _qt_call_section_8hpp.html  _qt_call_section_8hpp_source.html  _qt_contact_list_8cpp.html  _qt_contact_list_8hpp.html  _qt_contact_list_8hpp_source.html  _qt_network_form_8cpp.html  _qt_network_form_8hpp.html  _qt_network_form_8hpp_source.html  _qt_style_8hpp.html  _qt_style_8hpp_source.html  _s_q_ldatabase_8cpp.html  _s_q_ldatabase_8hpp.html  _s_q_ldatabase_8hpp_source.html  _tcp_query_8cpp.html  _tcp_query_8hpp.html  (+91 more)
documentation/Doxygen documentation/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  (+48 more)
src/client/: main.cpp
